sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:18: error: not found: value -
      case (true,taille-1) => return
                       ^